# tahini_lib

./: .gitignore  README.md  justfile
certificate_generation/: Cargo.toml
certificate_generation/src/: main.rs  manifest_generation.rs
config_parser/: Cargo.toml
config_parser/src/: main.rs
policy_signing/: Cargo.toml  rust-toolchain.toml
policy_signing/src/: lib.rs
policy_signing/src/utils/: dependency.rs
sidecar/: Cargo.toml
sidecar/src/: config.rs  main.rs
tahini_attest/: Cargo.toml
tahini_attest/crates/hoodini-client/: Cargo.toml
tahini_attest/crates/hoodini-client/src/: lib.rs
tahini_attest/crates/hoodini-core/: Cargo.toml
tahini_attest/crates/hoodini-core/src/: certificate.rs  lib.rs  service.rs  types.rs
tahini_attest/crates/hoodini-server/: Cargo.toml
tahini_attest/crates/hoodini-server/src/: lib.rs
tahini_attest/crates/hoodini-sidecar/: Cargo.toml
tahini_attest/crates/hoodini-sidecar/src/: lib.rs
tahini_attest/src/: client.rs  lib.rs  loader.rs  server.rs  sidecar.rs  types.rs
tahini_tarpc/: Cargo.toml
tahini_tarpc/src/: client.rs  context.rs  enums.rs  lib.rs  server.rs  transport.rs
tahini_tarpc/src/traits/: mod.rs  tahini_type.rs  transform.rs
tahini_tarpc_derive/: Cargo.toml
tahini_tarpc_derive/src/: lib.rs  tahini_type.rs
tahini_tarpc_derive/src/tahini_service/: company.rs  foreign.rs  internal.rs  mod.rs
