[package]
name = "policy_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-lc-rs = "1.13.1"
clap = { version = "4.5.40", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sha2 = "0.10.9"
