[package]
name = "tahini_attest"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Doukhan"]

[lib]
name = "tahini_attest"
path = "src/lib.rs"

[dependencies]
aws-lc-rs = "1.13.1"
clap = { version = "4.5.40", features = ["derive"], optional= true }
ctor = {version = "0.4.2", optional=true}
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = {version = "1.5.0", optional = true}
libc = "0.2.174"
serde = { version = "1.0.219", features = ["derive", "serde_derive"]}
serde_json = { version = "1.0.140", features = ["preserve_order"]}
sha2 = "0.10.9"
tarpc = { version = "0.36.0", features = ["full"] , optional = true}
tokio-util = "0.7.15"
toml = "0.8.23"

[features]
server = ["dep:ctor", "dep:lazy_static", "dep:clap"]
sidecar = ["dep:tarpc"]
client = ["dep:tarpc"]
default = ["client"]
